--- a/frontend/src/views/admin/pages/account/account.css
+++ b/frontend/src/views/admin/pages/account/account.css
@@ -1,39 +1,67 @@
-.mainAccount {
-    display: flex;
-    flex-direction: column;
-}
-
-.navAccount {
-    width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-}
-
- .createAccount {
-    float: right;
-    height: 45px;
-    width: 100px;
+.modal-product-line textarea {
     border: 0.5px solid lightgray;
+    resize: none;
+    min-height: 150px;
+}
+
+.modal-product-line .content {
+    min-width: 500px;
+}
+
+.modal-product-line button {
+    float: right;
+    margin: 20px -10px 5px 0;
+}
+
+.group-btn {
+    display: flex;
+    justify-content: space-between;
+    margin: 15px 0;
+}
+
+.group-btn .input {
+    height: 100%;
+    margin-right: 8px;
+    min-width: 350px;
+}
+
+.modal-product-line .error {
+    color: red;
+    margin-left: -10px;
+}
+
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.overlayProduct {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    background: rgba(49, 49, 49, 0.8);
+}
+
+.contentProduct {
+    transform: translate(-50%, -50%);
+}
+
+.row {
+    margin-top: 10px;
+}
+
+label > input,
+label > select {
     border-radius: 10px;
-    background: rgba(255, 255, 255, 0.54);
-    font-weight: 600;
-    color: #888;
-    line-height: 20px;
+    height: 40px;
+    margin-top: 5px !important;
+    border: 0.5px solid lightgray;
 }
-
-.createAccount:hover {
-    background: lightgray;
-}
-
-select {
-  width: 100%;
-  padding: 12px 20px;
-  /* margin: 8px 0; */
-  border-radius: 10px;
-  display: inline-block;
-  box-sizing: border-box;
-}
-
-/* input[type="text"]:hover {
-    background: lightgray;
-} */
