--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,7 +1,8 @@
 .landing {
     position: relative;
-    background: url("./assets/landing.jpg") no-repeat center center/cover;
+    background: url('./assets/landing.jpg') no-repeat center center/cover;
     height: 100vh;
+    width: 100vw;
 }
 
 .dark-overlay {
