--- a/frontend/src/assets/css/common.css
+++ b/frontend/src/assets/css/common.css
@@ -33,7 +33,7 @@
 
 .wrapper-content {
     flex: 6;
-    padding: 35px 20px;
+    padding: 35px 20px 0;
     height: 100%;
     display: flex;
     flex-direction: column;
